Feature(Layout): Update style for tooltip

--- a/data/styles/base/tooltip.less
+++ b/data/styles/base/tooltip.less
@@ -91,3 +91,99 @@
   border-color: transparent;
   border-style: solid;
 }
+
+
+// Custom boostrap 4 alpha tooltips
+.tooltip.in {
+  opacity: 1;
+}
+
+.tooltip.bs-tether-element-attached-left.tooltip-danger {
+  .tooltip-arrow {
+    border-right-color: @brand-danger;
+  }
+}
+
+.tooltip.bs-tether-element-attached-top.tooltip-danger {
+  .tooltip-arrow {
+    border-bottom-color: @brand-danger;
+  }
+}
+
+.tooltip.bs-tether-element-attached-right.tooltip-danger {
+  .tooltip-arrow {
+    border-left-color: @brand-danger;
+  }
+}
+
+.tooltip.bs-tether-element-attached-bottom.tooltip-danger {
+  .tooltip-arrow {
+    border-top-color: @brand-danger;
+  }
+}
+
+.tooltip.tooltip-danger {
+  .tooltip-inner {
+    background: @brand-danger;
+  }
+}
+
+.tooltip.bs-tether-element-attached-left.tooltip-warning {
+  .tooltip-arrow {
+    border-right-color: @brand-warning;
+  }
+}
+
+.tooltip.bs-tether-element-attached-top.tooltip-warning {
+  .tooltip-arrow {
+    border-bottom-color: @brand-warning;
+  }
+}
+
+.tooltip.bs-tether-element-attached-right.tooltip-warning {
+  .tooltip-arrow {
+    border-left-color: @brand-warning;
+  }
+}
+
+.tooltip.bs-tether-element-attached-bottom.tooltip-warning {
+  .tooltip-arrow {
+    border-top-color: @brand-warning;
+  }
+}
+
+.tooltip.tooltip-warning {
+  .tooltip-inner {
+    background: @brand-warning;
+  }
+}
+
+.tooltip.bs-tether-element-attached-left.tooltip-default {
+  .tooltip-arrow {
+    border-right-color: @black;
+  }
+}
+
+.tooltip.bs-tether-element-attached-top.tooltip-default {
+  .tooltip-arrow {
+    border-bottom-color: @black;
+  }
+}
+
+.tooltip.bs-tether-element-attached-right.tooltip-default {
+  .tooltip-arrow {
+    border-left-color: @black;
+  }
+}
+
+.tooltip.bs-tether-element-attached-bottom.tooltip-default {
+  .tooltip-arrow {
+    border-top-color: @black;
+  }
+}
+
+.tooltip.tooltip-default {
+  .tooltip-inner {
+    background: @black;
+  }
+}
