--- a/data/styles/base/tables.less
+++ b/data/styles/base/tables.less
@@ -23,6 +23,8 @@ th {
   width: 100%;
   max-width: 100%;
   margin-bottom: @line-height-computed;
+  color: @black;
+  font-size: 13px;
   // Cells
   > thead,
   > tbody,
@@ -40,7 +42,7 @@ th {
   // Bottom align for column headings
   > thead > tr > th {
     vertical-align: bottom;
-    border-bottom: 2px solid @table-border-color;
+    border-bottom: 1px solid @table-border-color;
   }
   // Remove top border from thead by default
   > caption + thead,
@@ -55,7 +57,7 @@ th {
   }
   // Account for multiple tbody instances
   > tbody + tbody {
-    border-top: 2px solid @table-border-color;
+    border-top: 1px solid @table-border-color;
   }
 
   // Nesting
@@ -100,7 +102,7 @@ th {
   > thead > tr {
     > th,
     > td {
-      border-bottom-width: 2px;
+      border-bottom-width: 1px;
     }
   }
 }
@@ -111,8 +113,11 @@ th {
 // Default zebra-stripe styles (alternating gray and transparent backgrounds)
 
 .table-striped {
-  > tbody > tr:nth-of-type(odd) {
+  > tbody > tr:nth-of-type(even) {
     background-color: @table-bg-accent;
+  }
+  th {
+    background-color: @gray-93;
   }
 }
 
