Feature(Layout): Update the panel design

--- a/data/styles/base/custom/mod_widget.less
+++ b/data/styles/base/custom/mod_widget.less
@@ -33,6 +33,7 @@
             background-color: transparent;
             &:hover, &:focus {
               background-color: darken(@heading-bg-color, 10%);
+              outline: none;
             }
             &:active {
               background-color: darken(@heading-bg-color, 15%);
