--- a/data/plugins/daterangepicker/less/daterangepicker.less
+++ b/data/plugins/daterangepicker/less/daterangepicker.less
@@ -38,6 +38,16 @@
     position: absolute;
     top: -6px;
   }
+  .today.custom_date {
+    background-color: inherit;
+    border-color: transparent;
+    color: inherit;
+    &:hover {
+      background-color: @gray-93;
+      border-color: transparent;
+      color: inherit;
+    }
+  }
   .calendar {
     display: none;
     margin: 4px;
