Refactor(DaterangePicker): Changed class name

--- a/data/plugins/daterangepicker/less/daterangepicker.less
+++ b/data/plugins/daterangepicker/less/daterangepicker.less
@@ -38,7 +38,7 @@
     position: absolute;
     top: -6px;
   }
-  .today.custom_date {
+  .today.custom-range {
     background-color: inherit;
     border-color: transparent;
     color: inherit;
