--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -307,7 +307,13 @@ input[type="radio"] {
 }
 
 select.form-control {
+  display: block !important;
+  height: 34px;
+  margin-left: 20px;
   padding-left: 5px;
+  position: absolute;
+  visibility: hidden;
+  width: 80%;
 
   option {
     color: @input-color;
