--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -312,7 +312,7 @@ select.form-control {
   margin-left: 20px;
   padding-left: 5px;
   position: absolute;
-  visibility: hidden;
+  opacity: 0;
   width: 80%;
 
   option {
