Refactor(AjaxChosen): Make code review changes

--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -308,9 +308,9 @@ input[type="radio"] {
 
 select.form-control {
   display: block !important;
-  height: 34px;
-  margin-left: 20px;
-  padding-left: 5px;
+  height: @input-height-base;
+  margin-left: @form-group-margin-bottom;
+  padding-left: @padding-base-horizontal-select;
   position: absolute;
   opacity: 0;
   width: 80%;
