--- a/data/styles/base/dark/variables_dark.less
+++ b/data/styles/base/dark/variables_dark.less
@@ -122,6 +122,7 @@
 
 @padding-base-vertical:     6px;
 @padding-base-horizontal:   10px;
+@padding-base-horizontal-select:  5px;
 
 @padding-large-vertical:    10px;
 @padding-large-horizontal:  16px;
