Feature(TreeType): Update the design for TreeSelector

--- a/data/plugins/fancytree/less/skin-common.less
+++ b/data/plugins/fancytree/less/skin-common.less
@@ -100,7 +100,7 @@ ul.fancytree-container {
 	padding: 3px;
 	margin: 0; // DT issue 201
 	background-color: white;
-	border: 1px dotted gray;
+	border: 1px dashed @black;
     overflow-y: scroll;
     max-height: 400px;
 //	height: 100%; // DT issue 263, 470
