Refactor(AjaxChosen): Make code review changes

--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -307,14 +307,16 @@ input[type="radio"] {
 }
 
 select.form-control {
-  display: block !important;
-  height: @input-height-base;
-  margin-left: @form-group-margin-bottom;
   padding-left: @padding-base-horizontal-select;
-  position: absolute;
-  opacity: 0;
-  width: 80%;
 
+  &[data-photon-type="entity_ajax_widget"] {
+    display: block !important;
+    height: @input-height-base;
+    margin-left: @form-group-margin-bottom;
+    position: absolute;
+    opacity: 0;
+    width: 80%;
+  }
   option {
     color: @input-color;
     background-color: @input-bg;
