--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -325,7 +325,8 @@ input[type="radio"] {
 select.form-control {
   padding-left: @padding-base-horizontal-select;
 
-  &[data-photon-type="entity_ajax_widget"] {
+  &[data-photon-type="entity_ajax_widget"],
+  &[data-photon-type="choice_widget"] {
     display: block !important;
     height: @input-height-base;
     margin-left: @form-group-margin-bottom;
