Bugfix(AjaxChosen): Multiselect requiered message

--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -332,7 +332,7 @@ select.form-control {
     margin-left: @form-group-margin-bottom;
     position: absolute;
     opacity: 0;
-    width: 80%;
+    width: 0;
   }
   option {
     color: @input-color;
