Improvement(Layout): Demo site clean-up

--- a/data/plugins/jqgrid/less/base/jqgrid.pager.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.pager.less
@@ -96,6 +96,13 @@
     span {
       display: block;
     }
+    &.btn {
+      &.ui-disabled {
+        &:hover {
+          background: transparent;
+        }
+      }
+    }
     &:hover {
     }
   }
