--- a/data/styles/base/custom/mod_tooltips.less
+++ b/data/styles/base/custom/mod_tooltips.less
@@ -163,7 +163,7 @@
   }
 }
 .tt-default {
-  .tooltip-variant(@gray; @gray; @gray; @gray);
+  .tooltip-variant(@tooltip-bg; @tooltip-bg; @tooltip-bg; @tooltip-bg);
 }
 .tt-primary {
   .tooltip-variant(@brand-primary; @brand-primary; @brand-primary; @brand-primary);
