--- a/data/styles/base/custom/custom-fixes.less
+++ b/data/styles/base/custom/custom-fixes.less
@@ -57,6 +57,19 @@ i {
   .page-content > & {
       margin: 0 0 30px;
   }
+  &.content-header {
+    box-shadow: none;
+    margin: -20px;
+    padding-top: (@jumbotron-padding / 2);
+    padding-bottom: (@jumbotron-padding / 2);
+
+    p {
+      margin-bottom: 0;
+    }
+    b, strong {
+      font-weight: 600;
+    }
+  }
 }
 
 .progress {
