--- a/data/styles/base/variables.less
+++ b/data/styles/base/variables.less
@@ -576,9 +576,9 @@
 //** Tooltip max width
 @tooltip-max-width:           200px;
 //** Tooltip text color
-@tooltip-color:               #fff;
+@tooltip-color:               @white;
 //** Tooltip background color
-@tooltip-bg:                  #000;
+@tooltip-bg:                  @black;
 @tooltip-opacity:             .9;
 
 //** Tooltip arrow width
