--- a/presentation/css/main.css
+++ b/presentation/css/main.css
@@ -1,19 +1,24 @@
 html,
 body {
     width: 100%;
-    height: 100%
+    margin:0; padding:0;
+	height:100%;
 }
-
+html{
+	background: url(images/bg.jpg) no-repeat center top fixed #001232; 
+	  -webkit-background-size: cover;
+	  -moz-background-size: cover;
+	  -o-background-size: cover;
+	  background-size: cover;
+}
 body {
     font-family: 'Open_sans';
     font-weight: 300;
-    background-image: url(images/bg.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
     color: white;
     font-size: 20px;
+	overflow:hidden;
 }
+*{ box-sizing:content-box}
 
 ::selection {
   background: none; 
@@ -30,24 +35,16 @@ p::-moz-selection, p *::selection  {
 }
 
 #header {
-    height: 180px;
-    background-image: url(images/bgHeader.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top center;
+	height: 180px;
+	top: -10px;
+	position: fixed;
+	background: url(images/bgHeader.png) no-repeat center bottom  ; 
 }
 
-.section {
-    text-align: center;
-}
-
-#about .content {
-    padding-top: 30px
-}
 
 #header,
 #footer {
-    position: fixed;
+   
     display: block;
     width: 100%;
     z-index: 9;
@@ -56,14 +53,22 @@ p::-moz-selection, p *::selection  {
     padding: 20px 0 0 0;
 }
 
-#header {
-    top: 0px;
-}
-
 #footer {
     bottom: 0px;
-    font-size: 14px;
-    height: 50px;
+    font-size: 13px;
+    height: 35px;
+	  position: fixed;
+	  left:0; bottom:0; 
+	  padding: 15px 0 0 0;
+	  background: url(images/footer.png) no-repeat center bottom;
+}
+
+.container{
+	padding:200px 20px 100px 0;
+	overflow-y: scroll;
+	width:100%; 
+	height:100%
+	
 }
 
 #infoMenu {
@@ -96,15 +101,15 @@ p {
 }
 
 .content {
-    margin-top: 350px;
-    padding: 10px 10%;
+    text-align:center;
+    padding:0 20px 60px 20px;
     box-sizing: content-box;
 }
 
 .text-bigger {
     font-family: 'Open_sans';
     font-weight: 600;
-    font-size: 3.2vmin;
+    font-size: 24px;
     margin: 0 0 20px 0;
     line-height: 1.4;
 }
@@ -112,13 +117,13 @@ p {
 .text-big {
     font-family: 'Open_sans';
     font-weight: 300;
-    font-size: 2.8vmin;
+    font-size: 20px;
     margin: 0 0 25px 0;
 
 }
 
 .text-small {
-    font-size: 2.2vmin;
+    font-size: 14px;
 }
 
 .logo {
@@ -127,11 +132,12 @@ p {
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
     transition: all 0.5s;
-    margin-top: 30px;
+    margin-top: 90px;
 }
 
 .logo-small {
     width: 310px;
+	margin-top: 30px;
 }
 
 .logo img {
@@ -171,7 +177,7 @@ a {
 }
 
 .logos img {
-    width: 3%;
+    width: 60px;
 }
 
 .menu-top {
@@ -180,7 +186,7 @@ a {
     font-weight: 600;
     margin: 0;
     padding: 0;
-    display: none;
+	display:none
 }
 
 .menu-top-show {
