Improvement(Layout): Demo site clean-up

--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -334,6 +334,13 @@
         color:@black;
       }
     }
+    .swatch-white {
+      background-color:@white;
+      &:before {
+        content: '@{white}';
+        color:@black;
+      }
+    }
   }
 
   .wba-font-primary,.wba-font-monospace {
