--- a/data/styles/base/custom/mod_form_elements.less
+++ b/data/styles/base/custom/mod_form_elements.less
@@ -312,6 +312,7 @@ input[type="radio"] {
     .input-group-addon {
       border-left: none;
       background: none;
+      cursor: default;
     }
   }
 }
