BugFix(panel widget): Panel widget with jqgrid is blank after interacting with the sidebar panel

--- a/data/styles/base/custom/custom-setup.less
+++ b/data/styles/base/custom/custom-setup.less
@@ -29,6 +29,8 @@
 ///* Animation components */
 @import "custom-animations.less";
 
+@import "custom-component-animations.less";
+
 ///* Photon - Bootstrap fixes */
 @import "custom-fixes.less";
 
