Feature(Layout): Resize jqGrid after show collapsed panel

--- a/data/plugins/jqgrid/less/base/jqgrid.base.less
+++ b/data/plugins/jqgrid/less/base/jqgrid.base.less
@@ -412,3 +412,19 @@ div.tablediv > .table-bordered {
     }
   }
 }
+
+.jqGrid-top-buttons {
+  background: #fff;
+  padding: 15px 0 18px 0;
+  margin-top: -15px;
+}
+
+.jqGrid-top-buttons.is_stuck {
+  box-shadow: 0 0 0 1px @white;
+  padding-bottom: 16px;
+}
+
+.ui-jqgrid-hdiv.is_stuck {
+  border-top: 1px solid @jqgrid-border-color;
+  margin-top: -1px
+}
