Feature(Layout): Added no results label to FancyTree

--- a/data/styles/base/custom/custom-utilities.less
+++ b/data/styles/base/custom/custom-utilities.less
@@ -565,3 +565,13 @@
 .note-popover.popover {
   display: none;
 }
+
+.no-margin-top-bottom{
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.no-padding-top-bottom{
+  padding-top: 0;
+  padding-bottom: 0;
+}
