Feature(Layout): Update jqGrid translations

--- a/data/styles/base/custom/custom-fixes.less
+++ b/data/styles/base/custom/custom-fixes.less
@@ -95,8 +95,7 @@ i {
 }
 .modal-footer {
   padding: @modal-footer-padding;
-  //background-color: @modal-footer-bg;
-  text-align: normal;
+  text-align: initial;
 }
 
 [data-notify="container"] {
