Feature(Sidebar): Menu improvements

--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -35,12 +35,16 @@
 @sidebar-second-level-bg:               #fff;
 @sidebar-third-level-bg:                #fff;
 
-@sidebar-menu-active-cell-bg:           #dedede;
+@sidebar-menu-active-cell-bg:           @brand-primary;
+@sidebar-menu-active-cell-text:         @white;
 @sidebar-menu-hover-cell-bg:            @gray-lighter;
+@sidebar-menu-hover-cell-text:          @brand-primary;
 
 @sidebar-submenu-mark-color:            @brand-primary;
-@sidebar-submenu-active-cell-bg:        #dedede;
+@sidebar-submenu-active-cell-bg:        @brand-primary;
+@sidebar-submenu-active-cell-text:      @white;
 @sidebar-submenu-hover-cell-bg:         @gray-lighter;
+@sidebar-submenu-hover-cell-text:       @brand-primary;
 
 @sidebar-tooltip-preview-bg:            #fff;
 @sidebar-tooltip-preview-text-color:    @black;
