--- a/data/styles/base/dark/custom_variables_dark.less
+++ b/data/styles/base/dark/custom_variables_dark.less
@@ -35,12 +35,16 @@
 @sidebar-second-level-bg:               #22313F;
 @sidebar-third-level-bg:                darken(@sidebar-second-level-bg,10%);
 
-@sidebar-menu-active-cell-bg:           #dedede;
+@sidebar-menu-active-cell-bg:           @brand-primary;
+@sidebar-menu-active-cell-text:         @white;
 @sidebar-menu-hover-cell-bg:            @gray-lighter;
+@sidebar-menu-hover-cell-text:          @brand-primary;
 
 @sidebar-submenu-mark-color:            @brand-primary;
 @sidebar-submenu-active-cell-bg:        @brand-primary;
+@sidebar-submenu-active-cell-text:      @white;
 @sidebar-submenu-hover-cell-bg:         @gray-lighter;
+@sidebar-submenu-hover-cell-text:       @brand-primary;
 
 @sidebar-tooltip-preview-bg:            #333;
 @sidebar-tooltip-preview-text-color:    @white;
