Feature(Sidebar): Menu improvements

--- a/data/styles/base/custom/custom-variables.less
+++ b/data/styles/base/custom/custom-variables.less
@@ -11,7 +11,7 @@
 // --------------------------------------------------
 
 @sidebar-max-width:                     200px;
-@sidebar-cell-height:                   53px;
+@sidebar-cell-height:                   40px;
 @sidebar-min-width:                     @sidebar-cell-height;
 @sidebar-border-width:                  1px;
 @sidebar-outer-border-color:            @gray-80;
@@ -20,13 +20,15 @@
 @sidebar-fontfamily:                    "Open_sans", Helvetica, Arial, sans-serif;
 
 @sidebar-fontweight-first-level:        600;
-@sidebar-fontweight-second-level:       400;
+@sidebar-fontweight-second-level:       600;
 @sidebar-fontweight-third-level:        400;
 
-@sidebar-fontsize:                      (@font-size-base - 1);
+@sidebar-fontsize-first-level:          @font-size-base;
+@sidebar-fontsize-second-level:         (@font-size-base - 2);
+@sidebar-fontsize-third-level:          (@font-size-base - 2);
 
 @sidebar-lineheight:                    @line-height-computed;
-@sidebar-iconsize:                      18px;
+@sidebar-iconsize:                      17px;
 
 @sidebar-cell-font-color:               @black;
 @sidebar-cell-font-color-hover:         @brand-primary;
