--- a/data/styles/base/custom/mod_sidebar.less
+++ b/data/styles/base/custom/mod_sidebar.less
@@ -103,6 +103,10 @@
          border-style: solid;
          border-width: @sidebar-border-width 0 0;
          border-color: darken(@sidebar-first-level-bg, 5%);
+
+        &:last-of-type {
+          border-bottom-width: @sidebar-border-width;
+        }
          a {
             display: block;
             min-height:@sidebar-cell-height;
@@ -112,7 +116,7 @@
 
             font-family: @sidebar-fontfamily;
             font-weight: @sidebar-fontweight-first-level;
-            font-size: @sidebar-fontsize;
+            font-size: @sidebar-fontsize-first-level;
             text-decoration: none;
 
             background-color: @sidebar-first-level-bg;
@@ -123,8 +127,8 @@
               display: inline-block;
               position:absolute;
               top:50%;
-              left:15px;
-              width: 23px;
+              left:10px;
+              width: 20px;
               .translate(0; -50%);
               vertical-align: middle;
               text-align: center;
@@ -165,6 +169,7 @@
 
                  font-family: @sidebar-fontfamily;
                  font-weight: @sidebar-fontweight-second-level;
+                 font-size: @sidebar-fontsize-second-level;
                }
                &:last-child {
                  border-bottom: none;
@@ -191,6 +196,7 @@
                      padding-left: (@sidebar-min-width + 10);
                      font-family: @sidebar-fontfamily;
                      font-weight: @sidebar-fontweight-third-level;
+                     font-size: @sidebar-fontsize-third-level;
                      background-color:@sidebar-third-level-bg;
                    }
                    &:not(.active){
@@ -310,16 +316,24 @@
         margin: 0;
         height: @sidebar-cell-height;
         line-height: @sidebar-lineheight;
-        padding: ((@sidebar-lineheight/2) + @sidebar-border-width) 15px;
-        font-size: @sidebar-fontsize;
+        padding: 5px 10px;
+        font-size: @sidebar-fontsize-first-level;
         text-shadow: none;
         text-decoration: none;
         background-color: @sidebar-first-level-bg;
         color: @sidebar-cell-font-color;
         position: relative;
+
         .menu-text {
           display: inline-block;
           margin:0 10px;
+        }
+        .btn-link {
+          color: @sidebar-cell-font-color;
+
+          &:hover {
+            color: @sidebar-cell-font-color-hover;
+          }
         }
       }
    }
@@ -384,7 +398,7 @@
 
                   &:hover {
                     overflow: inherit;
-                    width: (@sidebar-max-width + @sidebar-border-width + 13);
+                    width: (@sidebar-max-width + @sidebar-border-width);
 
                     &.active > .menu-item-data {
                       display: block;
@@ -416,7 +430,7 @@
             .sidebar-control {
                 width: @sidebar-min-width;
                 .sidebar-toggle {
-                    padding: ((@sidebar-lineheight/2)+@sidebar-border-width) 10px;
+                    padding: 5px;
                     .menu-text {
                         display:none;
                     }
