--- a/data/styles/base/dark/custom_variables_dark.less
+++ b/data/styles/base/dark/custom_variables_dark.less
@@ -23,10 +23,12 @@
 @sidebar-fontweight-second-level:       400;
 @sidebar-fontweight-third-level:        400;
 
-@sidebar-fontsize:          (@font-size-base - 1);
+@sidebar-fontsize-first-level:          @font-size-base;
+@sidebar-fontsize-second-level:         (@font-size-base - 2);
+@sidebar-fontsize-third-level:          (@font-size-base - 2);
 
 @sidebar-lineheight:                    @line-height-computed;
-@sidebar-iconsize:                      18px;
+@sidebar-iconsize:                      17px;
 
 @sidebar-cell-font-color:               @black;
 @sidebar-cell-font-color-hover:         @brand-primary;
