Bugfix(Layout): Modal buttons and sidebar meu width

--- a/data/styles/base/custom/mod_main.less
+++ b/data/styles/base/custom/mod_main.less
@@ -17,6 +17,9 @@ body {
     margin: 0;
     .main-content {
       padding: 0;
+      z-index: 1;
+      position: relative;
+
       .page-content {
         position: relative;
         margin: 0;
